--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,21 @@
   font-family: "Poppins", sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #b1afaf;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #838282;
+  border-radius: 50px;
+}
+
 /*=====================================
 =================FormLogin=============
 =====================================*/
@@ -19,13 +34,15 @@
 }
 
 .img-form-left {
-  background-image: url(../../public/background-image-form.jpg);
+  background-image: linear-gradient(#000000b0, transparent),
+    url(../../public/background-image-form.jpg);
   background-size: cover;
   height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
 }
+
 .img-logo {
   width: 43%;
   height: 43%;
@@ -59,13 +76,15 @@
   font-size: 2.6rem;
   margin-bottom: 4rem;
 }
+
 .cont-icon-input-form {
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
   width: 100%;
-  max-width: 35%;
+  max-width: 60%;
 }
+
 .input-form-login {
   padding-left: 2rem;
   border: 0;
@@ -74,6 +93,11 @@
   font-size: 1rem;
   width: 100%;
 }
+
+.input-form-login:focus {
+  outline: none;
+}
+
 .cont-icon-input-form span {
   position: absolute;
   margin-left: 0.4rem;
@@ -103,8 +127,9 @@
 .sidebar {
   background-color: #2f3843;
   position: sticky;
+
   /* width: 15%; */
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   padding: 3rem 3rem 1rem 3rem;
@@ -120,7 +145,7 @@
 }
 
 .section-logo-tittle h1 {
-  font-size: 2.2rem;
+  font-size: 1.7rem;
   color: #fff;
   margin-bottom: 1rem;
 }
@@ -139,7 +164,7 @@
 }
 
 .button-sidebar {
-  padding-top: 4rem;
+  padding-top: 2rem;
 }
 
 /*estilo de los componentes de los iconos del sidebar*/
@@ -150,7 +175,7 @@
   justify-content: center;
   gap: 3rem;
   margin-bottom: 2rem;
-  font-size: 2rem;
+  font-size: 1.2rem;
   color: #8391a2;
   cursor: pointer;
 }
@@ -164,13 +189,14 @@
 
 .button-log-out-sidebar {
   width: 100%;
-  height: 5rem;
+  padding: 0.7rem 1.5rem;
   background-color: #c53535;
   border: 0;
   border-radius: 20px;
   cursor: pointer;
   font-size: 1.5rem;
   color: #fff;
+  margin-bottom: 1rem;
 }
 
 /*estilos del titulo de el componente Name de navbar*/
@@ -188,7 +214,7 @@
   gap: 1rem;
   padding-right: 2rem;
   padding-left: 2rem;
-  height: 7rem;
+  height: 5rem;
   background-color: #f2f2f2;
 }
 
@@ -224,7 +250,7 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
-  height: 7rem;
+  height: 5rem;
 }
 
 .section-tittle-navbar {
@@ -248,20 +274,59 @@
 
 .layout {
   display: flex;
+  height: 100vh;
+
 }
 
 .layout-sidebar {
   width: 17vw;
 }
 
-.layout-content {
+.layout-content-container {
   width: 83vw;
+  overflow-y: scroll;
+
+}
+
+
+.layout-content {
+
+  background-color: #f2f2f2;
+  height: 100%;
 }
 
 /*=====================================
 =================HomePage===================
 =====================================*/
 
-.home {
-  background-color: #f2f2f2;
+
+/*=====================================
+=================componentsGrafics===================
+=====================================*/
+
+
+.grafics-container-statistics {
+  padding: 2rem;
+}
+
+.grafics-content-statistics {
+  padding: 2rem;
+  background-color: #fff;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.grafics-tittle-content {
+  width: 100%;
+}
+
+
+
+
+.grafic-container {
+  width: 100%;
+  max-width: 75%;
 }
