--- a/src/index.css
+++ b/src/index.css
@@ -275,7 +275,6 @@
 .layout {
   display: flex;
   height: 100vh;
-
 }
 
 .layout-sidebar {
@@ -285,25 +284,15 @@
 .layout-content-container {
   width: 83vw;
   overflow-y: scroll;
-
 }
-
 
 .layout-content {
-
   background-color: #f2f2f2;
-  height: 100%;
 }
 
 /*=====================================
-=================HomePage===================
+====componetnStatistics de Grafics=====
 =====================================*/
-
-
-/*=====================================
-=================componentsGrafics===================
-=====================================*/
-
 
 .grafics-container-statistics {
   padding: 2rem;
@@ -321,12 +310,25 @@
 
 .grafics-tittle-content {
   width: 100%;
+  padding-bottom: 1rem;
+  font-size: 2rem;
 }
-
-
-
 
 .grafic-container {
   width: 100%;
   max-width: 75%;
+  height: 40vh;
+}
+
+/*=====================================
+=================Statistics============
+=====================================*/
+
+.container-statistic {
+  display: flex;
+  width: 100%;
+}
+
+.content-statistics {
+  width: 50%;
 }
