--- a/src/index.css
+++ b/src/index.css
@@ -167,6 +167,11 @@
   padding-top: 2rem;
 }
 
+.button-sidebar:hover {
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+
 /*estilo de los componentes de los iconos del sidebar*/
 
 .icon-component-sidebar {
@@ -183,6 +188,11 @@
 .icons-sidebar-link {
   text-decoration: none;
   color: #8391a2;
+}
+.icon-component-sidebar:hover {
+  color: #fff;
+  transform: scale(1.1);
+  transition: 0.3s;
 }
 
 /*boton del sidebar*/
@@ -201,7 +211,7 @@
 
 /*estilos del titulo de el componente Name de navbar*/
 
-.class-name-from-components-nav {
+.from-components-nav {
   font-size: 3rem;
   color: #2a323c;
 }
@@ -216,6 +226,11 @@
   padding-left: 2rem;
   height: 5rem;
   background-color: #f2f2f2;
+}
+
+.profile-component-navbar:hover {
+  background-color: #b6b6b6;
+  transition: 0.3s;
 }
 
 .img-profile-navbar {
@@ -268,6 +283,14 @@
   color: #313a46;
 }
 
+.nitification-navbar:hover {
+  background-color: #313a46;
+  transition: 0.8s;
+  padding: 0.3rem;
+  border-radius: 50px;
+  color: #fff;
+}
+
 /*=====================================
 =================Layouts===================
 =====================================*/
@@ -306,6 +329,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
+}
+.grafics-content-statistics:hover {
+  transform: scale(1.009);
+  transition: 0.3s;
 }
 
 .grafics-tittle-content {
@@ -331,4 +359,39 @@
 
 .content-statistics {
   width: 50%;
+}
+
+/*=====================================
+=================TablesWorkers============
+=====================================*/
+
+.container-tables {
+  padding: 2rem;
+  height: 100vh;
+  font-size: 1.2rem;
+}
+
+table {
+  padding: 2rem;
+  background-color: #fff;
+  width: 100%;
+  text-align: left;
+  border-collapse: collapse;
+  border-radius: 20px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+td,
+th {
+  padding: 2rem;
+}
+
+thead {
+  border-bottom: 3px solid #f2f2f2;
+}
+
+tr:hover td {
+  background-color: #8a929dab;
+  color: #fff;
+  transition: 0.3s;
 }
