--- a/src/index.css
+++ b/src/index.css
@@ -191,7 +191,7 @@
 }
 .icon-component-sidebar:hover {
   color: #fff;
-  transform: scale(1.1);
+
   transition: 0.3s;
 }
 
@@ -279,15 +279,8 @@
 }
 
 .nitification-navbar {
-  font-size: 2.7rem;
+  font-size: 2rem;
   color: #313a46;
-}
-
-.nitification-navbar:hover {
-  background-color: #b6b6b6;
-  transition: 0.8s;
-  padding: 0.3rem;
-  border-radius: 50px;
 }
 
 /*=====================================
@@ -396,17 +389,52 @@ tr:hover td {
 }
 
 .color-active-workers {
+  cursor: pointer;
   background-color: #31c953;
   padding: 0.8rem 1.2rem;
   border-radius: 15px;
 }
 
 .color-inactive-workers {
+  cursor: pointer;
   background-color: #fb0a0a;
   padding: 0.8rem 1.2rem;
   border-radius: 15px;
+  color: #fff;
 }
 
+/*css de los iconos de la parte de operarios (workers)*/
+
 .general-icons-tables-workers {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
+}
+
+.general-icons-tables-workers-info {
+  color: #00b3ff;
+}
+
+/* estilos para centrar los iconos en las tablas*/
+
+.icon-table-center {
+  text-align: center;
+}
+
+/*estilos de los iconos de la parte de Processes*/
+
+.action-icon-from-processes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
+}
+
+.color-icon-trash-processes {
+  color: #ff0000;
+}
+
+/*ESTILOS DE EL (LINK) DE HOME*/
+
+.link-home-style {
+  text-decoration: none;
+  color: #2a323c;
 }
