--- a/src/index.css
+++ b/src/index.css
@@ -438,3 +438,10 @@ tr:hover td {
   text-decoration: none;
   color: #2a323c;
 }
+
+/*ESTILOS DE LA PARTE DE ABAJO DE EL HOME*/
+.container-home {
+  display: flex;
+  padding: 2rem;
+  gap: 0 4rem;
+}
