--- a/src/components/componentsHome/hojas-de-estilo/card_inicio.css
+++ b/src/components/componentsHome/hojas-de-estilo/card_inicio.css
@@ -7,6 +7,8 @@
   flex-wrap: wrap;
   align-content: space-around;
   justify-content: center;
+  padding: 2rem;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .contenedor-card-inicio:hover {
@@ -23,17 +25,17 @@
 .imagen-texto-color-icono {
   font-size: 1rem;
   background-color: rgb(216, 216, 216);
-  width: 90%;
-  height: 19%;
+  width: 100%;
+  height: 20%;
   display: flex;
-  justify-content: start;
-  align-items: center;
   justify-content: center;
-  border-radius: 20px;
-  gap: 1rem;
+  align-items: center;
+  border-radius: 25px;
+  gap: 10rem;
 }
+
 .titulo-card {
-  display: flex;
-  flex-direction: column-reverse;
-  width: 12%;
+  width: 100%;
+  padding-bottom: 1rem;
+  font-size: 2rem;
 }
