--- a/src/index.css
+++ b/src/index.css
@@ -445,3 +445,29 @@ tr:hover td {
   padding: 2rem;
   gap: 0 4rem;
 }
+
+/*estilos de la vista de procesos desde inicio*/
+
+.container-processes-home {
+  padding: 2rem;
+  width: 100%;
+  height: 40vh;
+  background-color: #fff;
+  font-size: 2rem;
+  border-radius: 15px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
+}
+.container-processes-home:hover {
+  transform: scale(1.009);
+  transition: 0.3s;
+}
+
+.tittle-processes-home {
+  padding-bottom: 1rem;
+}
+
+.img-processes-home {
+  width: 100%;
+  border-radius: 15px;
+  background-size: cover;
+}
