--- a/src/components/componentsHome/hojas-de-estilo/card.css
+++ b/src/components/componentsHome/hojas-de-estilo/card.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   justify-content: space-around;
   border-radius: 3%;
+
 }
 
 .foto {
@@ -41,4 +42,19 @@
  
 }
 
+
+/*estilos de el modal*/
+
+.modal-style-backgrownd{
+  background-color: rgba(0, 0, 0, 0.575);
+  backdrop-filter: blur(5px);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
